--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,52 +1,56 @@
-name: Metrics
+name: GitHub Metrics
 on:
   schedule:
-    - cron: "0 */12 * * *"   # refresh twice daily
+    - cron: "0 */12 * * *"   # Update twice daily
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
+  github-metrics:
     runs-on: ubuntu-latest
     permissions:
-      contents: write   # needed to commit metrics.svg back to the repo
+      contents: write
     steps:
-      - name: Generate metrics
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
-          user: CyberfolioChronicles                 # <-- your GitHub username
-          token: ${{ secrets.METRICS_TOKEN }}       # <-- we’ll add this secret in Step 4
-
-          # Base sections
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: JayeshKakkad-Rotoclear
           template: classic
-          base: header, activity, repositories, metadata
+          base: header, activity, community, repositories, metadata
           config_timezone: Europe/Berlin
-
-          # Include repos beyond your personal account
+          
+          # Include all repos (personal + organizations, public + private)
           repositories_forks: yes
           repositories_affiliations: owner, collaborator, organization_member
-          # ^ requires token scopes: repo + read:org (Step 3)
-
-          # Languages (compact and accurate)
+          
+          # Languages plugin with detailed analysis
           plugin_languages: yes
           plugin_languages_indepth: yes
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
           plugin_languages_details: bytes-size, percentage
-
-          # Coding habits (kept professional)
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_habits_charts: yes
-
-          # Output file in the repo root
+          plugin_languages_analysis_timeout: 15
+          
+          # Notable contributions (shows org work)
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_repositories: yes
+          
+          # Activity plugin
+          plugin_activity: yes
+          plugin_activity_limit: 5
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          
+          # Achievements
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          
+          # Commit output
           output_action: commit
-          committer_branch: ${{ github.ref_name }}
-          committer_message: "chore: update metrics.svg"
-
-      # If your repo has branch protection preventing direct commits by workflows,
-      # comment out output_action above and use the step below instead:
-      # - name: Commit generated files
-      #   uses: EndBug/add-and-commit@v9
-      #   with:
-      #     add: "metrics.svg"
-      #     message: "chore: update metrics.svg"
+          committer_branch: main
+          committer_message: "chore: update github metrics"
